@@ -1,3 +1,8 @@
+2003-01-27  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmTaskBar/FvwmTaskBar.c (redraw_buttons):
+	fixed PageOnly option after a desk change
+
 2003-01-24  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmIconMan/readconfig.c (read_in_resources):
